Fix contact title text alignment

--- a/style.css
+++ b/style.css
@@ -730,6 +730,7 @@ footer {
     margin: 0;
     font-size: 23px;
     line-height: 35px;
+    text-align: left;
   }
 
   .form-button {
